syntax = "proto3";
package {{ project-name | snake_case}};

service {{ project-name | upper_camel_case }} {
  rpc SayHello(HelloRequest) returns (HelloReply) {}
}

message HelloRequest { string name = 1; }

message HelloReply { string message = 1; }
